svolgimento della card

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
             <div class="col">
                 <img src="img/male1.png" alt="male1">
-                
-                
-
-
             </div>
 
-
+            <div class="col2">
+                <h3>Marco Bianchi</h3>
+                Designer
+                <p>marcobianchi@team.com</p>
+            </div>
 
 
 
