--- a/index.html
+++ b/index.html
@@ -19,33 +19,95 @@
 
     <main>
 
-        <div class="container">
+        <div class="container clearfix">
 
             <div class="col">
-                <img src="img/male1.png" alt="male1">
+               <div class="contenitore  clearfix">
+                    <div class="immagine">
+                        <img src="img/male1.png" alt="male1">
+                    </div>
+
+                    <div class="contenuto">
+                        <h3>Marco Bianchi</h3>
+                        <p> Designer</p>
+                        <p class="blue">marcobianchi@team.com</p>
+                    </div>
+                </div>
             </div>
 
-            <div class="col2">
-                <h3>Marco Bianchi</h3>
-                Designer
-                <p>marcobianchi@team.com</p>
-            </div>
+            <div class="col">
+                <div class="contenitore  clearfix">
+                     <div class="immagine">
+                         <img src="img/female1.png" alt="male1">
+                     </div>
+ 
+                     <div class="contenuto">
+                         <h3>Laura Rossi</h3>
+                         <p>Front-end Developer</p>
+                         <p class="blue">laurarossi@team.com</p>
+                     </div>
+                 </div>
+             </div>
 
+             <div class="col">
+                <div class="contenitore  clearfix">
+                     <div class="immagine">
+                         <img src="img/male2.png" alt="male1">
+                     </div>
+ 
+                     <div class="contenuto">
+                         <h3>Giorgio Verdi</h3>
+                         <p>Back-end Developer</p>
+                         <p class="blue">giorgioverdi@team.com</p>
+                     </div>
+                 </div>
 
-
-
+                 
 
         </div>
 
+        
 
+            <div class="col">
+               <div class="contenitore  clearfix">
+                    <div class="immagine">
+                        <img src="img/female2.png" alt="male1">
+                    </div>
 
+                    <div class="contenuto">
+                        <h3>Marta Ipsum</h3>
+                        <p>SEO Specialist</p>
+                        <p class="blue">martaipsum@team.com</p>
+                    </div>
+                </div>
+            </div>
 
+            <div class="col">
+                <div class="contenitore  clearfix">
+                     <div class="immagine">
+                         <img src="img/male3.png" alt="male1">
+                     </div>
+ 
+                     <div class="contenuto">
+                         <h3>Roberto Lorem</h3>
+                         <p>Project Manager</p>
+                         <p class="blue">robertolorem@team.com</p>
+                     </div>
+                 </div>
+             </div>
 
-
-
-
-
-
+             <div class="col">
+                <div class="contenitore  clearfix">
+                     <div class="immagine">
+                         <img src="img/female3.png" alt="male1">
+                     </div>
+ 
+                     <div class="contenuto">
+                         <h3>Daniela Amet</h3>
+                         <p>Analyst</p>
+                         <p class="blue">danielaamet@team.com</p>
+                     </div>
+                 </div>
 
 
 
